--- a/style.css
+++ b/style.css
@@ -540,7 +540,9 @@ form textarea {
   font-size: 16px;
   background: var(--main-color);
   color: var(--text-color);
-  width: 160px;
+  width: 155px;
+  padding: 10px;
+  border-radius: 9px;
   transition: all 0.45s ease;
 }
 
