--- a/style.css
+++ b/style.css
@@ -92,13 +92,27 @@ section {
   position: relative;
   height: 100vh;
   width: 100%;
-  background-image: url(./img/back22.JPG);
+  background-image: linear-gradient(rgba(4, 11, 20, 0.7), rgba(4, 11, 20, 0.7)), url(./img/back1212.JPG);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+}
+
+.home-text {
+  position: relative;
+  z-index: 2;
+  padding: 0 15px;
+}
+
+.home-text h1,
+.home-text h3,
+.home-text p,
+.home-text .social-icons a,
+.home-text .button a {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .slide {
@@ -654,7 +668,19 @@ form textarea {
   }
 }
 
-@media (max-width: 920px) {
+@media (max-width: 820px) {
+  .home {
+    height: 100vh;
+    background-image: linear-gradient(rgba(4, 11, 20, 0.7), rgba(4, 11, 20, 0.7)), url(./img/back1212.JPG);
+    background-attachment: fixed;
+    padding: 0 5%;
+  }
+
+  .home-text {
+    padding: 0;
+    width: 100%;
+  }
+
   .about {
     grid-template-columns: auto;
   }
