--- a/style.css
+++ b/style.css
@@ -672,13 +672,41 @@ form textarea {
   .home {
     height: 100vh;
     background-image: linear-gradient(rgba(4, 11, 20, 0.7), rgba(4, 11, 20, 0.7)), url(./img/back1212.JPG);
-    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     padding: 0 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .home-text {
     padding: 0;
     width: 100%;
+    text-align: center;
+  }
+
+  .home-text h1 {
+    font-size: 2.5rem;
+  }
+
+  .home-text h3 {
+    font-size: 1.8rem;
+  }
+
+  .home-text .social-icons {
+    justify-content: center;
+  }
+
+  .button {
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+
+  .btn2 {
+    margin-left: 0;
   }
 
   .about {
